# SpectralMindV50

./: .cz.toml  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci.cuda  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  VERSION  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements-kaggle.txt  setup.cfg
.github/: Architecture.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  auto_merge.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: artifact-sweeper.yml  branch-protection-auto-merge.yml  ci.yml  codeql.yml  dependabot.yml  docker-build.yml  docs.yml  integration.yml  kaggle_notebook_ci.yml  pip-audit.yml  release-bump.yml  release.yml  sbom-refresh.yml  sbom.yml  security.yml  sweeper.yml  trivy-scan.yml  trivy.yml
ADR/: 0001-choose-hydra-dvc.md  0002-physics-informed-losses.md  0003-ci-cuda-parity.md  0004-dual-encoder-fusion.md  0005-cli-first-orchestration.md  0006-reproducibility-standards.md  0007-submission-schema-validation.md  0008-model-explainability-diagnostics.md  0009-artifact-retention-governance.md  README.md
assets/diagrams/: modules.mmd  pipeline.mmd  provenance.dot  provenance.mmd
configs/: diagnose.yaml  predict.yaml  submit.yaml  train.yaml
configs/calib/: architecture.md  default.yaml  fast.yaml  nominal.yaml  strict.yaml
configs/calib/method/: adc.yaml  cds.yaml  dark.yaml  flat.yaml  phase.yaml  photometry.yaml  trace.yaml
configs/data/: ARCHITECTURE.md  debug.yaml  default.yaml  kaggle.yaml  nominal.yaml  splits.yaml
configs/env/: ARCHITECTURE.md  ci.yaml  docker.yaml  kaggle.yaml  kaggle_infer.yaml  local.yaml
configs/env/conda/: CONDA_ENV.yml
configs/logger/: ARCHITECTURE.md  console.yaml  csv.yaml  default.yaml  jsonl.yaml  noop.yaml  tensorboard.yaml  wandb.yaml
configs/loss/: ARCHITECTURE.md  band_coherence.yaml  calibration.yaml  composite.yaml  gll.yaml  nonneg.yaml  smoothness.yaml
configs/model/: ARCHITECTURE.md  airs_encoder.yaml  decoder.yaml  fgs1_encoder.yaml  fusion.yaml  v50.yaml  v50_large.yaml  v50_small.yaml
configs/preprocess/: ARCHITECTURE.md  README.md  augment.yaml  binning.yaml  default.yaml  detrend.yaml  export.yaml  fast.yaml  load.yaml  mask.yaml  nominal.yaml  normalize.yaml  pack.yaml  strict.yaml  tokenize.yaml  window.yaml
configs/profiles/: README.md  ablation_priors_off.yaml  amp_off.yaml  ampere_bf16.yaml  ci.yaml  ci_fast.yaml  cpu.yaml  ddp.yaml  debug.yaml  diagnose.yaml  full.yaml  hyper_sweep.yaml  kaggle_submit.yaml  local_dev.yaml  low_vram.yaml  mlflow.yaml  notebook.yaml  overfit_small.yaml  predict_only.yaml  profiling.yaml  resume.yaml  soft_ablation_example.yaml  wandb_online.yaml
configs/training/: ablation.yaml  ablation_band_coherence.yaml  ablation_calibration.yaml  ablation_nonneg.yaml  ablation_smoothness.yaml  accumulate_grad_batches.yaml  callbacks.yaml  checkpoint.yaml  dataloader.yaml  early_stopping.yaml  fast_ci.yaml  lightning.yaml  logger.yaml  optimizer.yaml  precision.yaml  scheduler.yaml
docs/: ARCHITECTURE.md  index.md  mkdocs.yml
docs/diagrams/: architecture.mmd  model.mmd  model_internals.mmd  pipeline.mmd
docs/guides/: kaggle.md  quickstart.md
kaggle/: 00_exploration.ipynb  00_exploration_smv50.ipynb  10_alignment_and_binning.ipynb  10_alignment_binning_smv50.ipynb  20_ablation_grid.ipynb  30_error_analysis.ipynb  99_submission_check.ipynb  Quickstart.ipynb  README.md  SpectraMind_V50_Kaggle_Quickstart.ipynb  alignment_binning.ipynb  exploration.ipynb  input_symlinks.md  kaggle_predict_smv50.ipynb  kaggle_quickstart.ipynb  kaggle_template.ipynb  kaggle_train_smv50.ipynb  model_ablation.ipynb  notebook_template.ipynb  predict.ipynb  smv50_kaggle_error_analysis.ipynb  submission_check.ipynb  train.ipynb
notebooks/: 00_exploration.ipynb  20_model_ablation.ipynb
schemas/: config_snapshot.schema.json  diagnostics.schema.json  events.schema.json  manifest.schema.json  metrics.schema.json  submission.schema.json  submission.tableschema.sample_id.json
scripts/: bump_version.sh  fast_diagnose.sh  fetch_data.sh  kaggle_submit.sh  package_precalibrated.sh  package_submission.sh  render_diagrams.sh  run_diagnostics.sh  run_pipeline.sh  validate_jsonl.py
src/spectramind/: __init__.py  __main__.py  cli.py  reports.py
src/spectramind/calib/: __init__.py  adc.py  cds.py  dark.py  flat.py  phase.py  photometry.py  trace.py
src/spectramind/cli/: __init__.py  doctor.py  submission.py  train.py
src/spectramind/data/: collate.py  datamodule.py  datasets.py  synthetic.py  transforms.py
src/spectramind/diagnose/: __init__.py  cli.py  io.py  metrics.py  plots.py  run.py
src/spectramind/diagnostics/: __init__.py  adc.py  logic_checks.py  physics.py  report.py  spectral_analysis.py  test_adc_diag.py
src/spectramind/logging/: __init__.py  event_logger.py  events.py  jsonl.py  lightning_adapter.py  manifest.py  metrics.py  run_context.py  utils.py
src/spectramind/losses/: __init__.py  band_coherence.py  calibration.py  composite.py  composite_physics.py  gaussian.py  nonneg.py  penalties.py  smoothness.py  utils.py
src/spectramind/models/: __init__.py  airs_gnn.py  decoder_head.py  fgs1_mamba.py  fusion_xattn.py  system.py
src/spectramind/pipeline/: __init__.py  calibrate.py  cli.py  diagnostics.py  predict.py  runner.py  stages.py  submit.py  train.py
src/spectramind/predict/: __init__.py  cli.py  (+3 more)
tests/: conftest.py
tests/calib/: conftest.py  test_adc.py  test_cds.py  test_dark.py  test_detrend.py  test_flat.py  test_photometry.py  test_trace.py
tests/golden/: test_submission_roundtrip.py
tests/integration/: test_calib_chain.py  test_end_to_end_cli.py  test_kaggle_runtime_guardrails.py
tests/unit/: test_hashing.py  test_metrics.py  test_models_shapes.py  test_schemas.py  test_seed.py  test_submission_validator.py  test_submission_validator_property.py  test_transforms.py
tools/: check_version_sync.py  make_golden_submission.py  validate_selftest_jsonl.py
(+51 files in other folders)
